crates/toml/tests/snapshots/invalid/float/us-after-point.stderr
TOML parse error at line 1, column 20
  |
1 | us-after-point = 1._2
  |                    ^
`_` may only go between digits
